# Jinja-Report

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
backend/: catalog_loader.py  generator.py  importer.py  main.py  models.py  preview_renderer.py  validator.py
catalog/: keyword_index.json  layout_presets.json  section_catalog.json
fixtures/: _base.html.j2  mock_section_data.json
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CoverEditor.tsx  ExportPanel.tsx  PreviewPane.tsx  SectionEditor.tsx  SectionList.tsx  SectionPicker.tsx  TemplateMetaForm.tsx
schemas/: template_draft.schema.json
scripts/: extract_catalog.py  extract_keywords.py  validate_against_agent.py
tests/: conftest.py  test_api_functional.py  test_generator.py  test_importer_roundtrip.py  test_preview.py  test_validator.py
tests/fixtures/: invalid_draft_bad_id.json  sample_draft.json
